--- a/fr/index.html
+++ b/fr/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title></title><link rel="canonical" href=""/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=" /></head></html>
+<!DOCTYPE html><html><head><title>https://lutherieurbaine93.github.io/LU93_site/</title><link rel="canonical" href="https://lutherieurbaine93.github.io/LU93_site/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://lutherieurbaine93.github.io/LU93_site/" /></head></html>
